// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NISessionWelcome with accounts has the expected html structure 1`] = `
"<div id=\\"session-welcome\\" class=\\"tm-session\\">
   <div class=\\"tm-session-container\\">
      <div class=\\"tm-session-header\\">
         <a>&nbsp;</a>
         <div class=\\"tm-session-title\\">
            Sign in to Cosmos Voyager
         </div>
<a><i class=\\"material-icons\\">help_outline</i></a>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-li-session\\">
      <div class=\\"tm-li-session-icon\\">
         <i class=\\"material-icons\\">lock</i>
      </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Sign in with password
   </div>
<div class=\\"tm-li-session-subtitle\\">
   If you have an account, choose this option.
</div>
</div>
</div>
<div class=\\"tm-li-session\\">
   <div class=\\"tm-li-session-icon\\">
      <i class=\\"material-icons\\">person_add</i>
   </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Create new account
   </div>
<div class=\\"tm-li-session-subtitle\\">
   Generate a brand new seed and create a new account.
</div>
</div>
</div>
<div class=\\"tm-li-session\\">
   <div class=\\"tm-li-session-icon\\">
      <i class=\\"material-icons\\">settings_backup_restore</i>
   </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Import with seed
   </div>
<div class=\\"tm-li-session-subtitle\\">
   Use an existing seed phrase to create an account.
</div>
</div>
</div>
<div class=\\"tm-li-session\\">
   <div class=\\"tm-li-session-icon\\">
      <i class=\\"material-icons\\">usb</i>
   </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Sign in with hardware
   </div>
<div class=\\"tm-li-session-subtitle\\">
   If you have a Ledger Wallet, choose this option.
</div>
</div>
</div>
<div class=\\"fundraiser-warning\\">
   <div class=\\"fundraiser-warning__title\\">
      Warning – Do not enter your fundraiser seed. This software has not been audited. Never enter your 12-word seed while your computer is connected to the internet.
   </div>
<div class=\\"fundraiser-warning__subtitle\\">
   Even when we do start supporting fundraiser seeds, don't use it except for testing or with small amounts. Soon we will release a command line interface to use for the signing of transactions offline including support for certain hardware ledgers.
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\"></div>
</div>
</div>"
`;

exports[`NISessionWelcome without accounts has the expected html structure 1`] = `
"<div id=\\"session-welcome\\" class=\\"tm-session\\">
   <div class=\\"tm-session-container\\">
      <div class=\\"tm-session-header\\">
         <a>&nbsp;</a>
         <div class=\\"tm-session-title\\">
            Sign in to Cosmos Voyager
         </div>
<a><i class=\\"material-icons\\">help_outline</i></a>
</div>
<div class=\\"tm-session-main ps\\">
   <!---->
   <div class=\\"tm-li-session\\">
      <div class=\\"tm-li-session-icon\\">
         <i class=\\"material-icons\\">person_add</i>
      </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Create new account
   </div>
<div class=\\"tm-li-session-subtitle\\">
   Generate a brand new seed and create a new account.
</div>
</div>
</div>
<div class=\\"tm-li-session\\">
   <div class=\\"tm-li-session-icon\\">
      <i class=\\"material-icons\\">settings_backup_restore</i>
   </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Import with seed
   </div>
<div class=\\"tm-li-session-subtitle\\">
   Use an existing seed phrase to create an account.
</div>
</div>
</div>
<div class=\\"tm-li-session\\">
   <div class=\\"tm-li-session-icon\\">
      <i class=\\"material-icons\\">usb</i>
   </div>
<div class=\\"tm-li-session-text\\">
   <div class=\\"tm-li-session-title\\">
      Sign in with hardware
   </div>
<div class=\\"tm-li-session-subtitle\\">
   If you have a Ledger Wallet, choose this option.
</div>
</div>
</div>
<div class=\\"fundraiser-warning\\">
   <div class=\\"fundraiser-warning__title\\">
      Warning – Do not enter your fundraiser seed. This software has not been audited. Never enter your 12-word seed while your computer is connected to the internet.
   </div>
<div class=\\"fundraiser-warning__subtitle\\">
   Even when we do start supporting fundraiser seeds, don't use it except for testing or with small amounts. Soon we will release a command line interface to use for the signing of transactions offline including support for certain hardware ledgers.
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\"></div>
</div>
</div>"
`;
